# vcity_circularity_api

./: .env  .gitignore  Dockerfile  MANIFEST.in  README.md  db_generation.ipynb  example_request.sh  log.txt  post_install.py  pyproject.toml  requirements.txt
backend/: main.py
backend/auth/: auth.py  hashing.py
backend/core/: config.py  endpoints.py  routers.py
backend/data/: db_methods.py  fake_db.py  users_db_fake.json
backend/models/jobs/scripts/: downloadloop.py
backend/models/parameters/: cities.csv  parameters.py
backend/models/scripts/: analyze_results.py  cluster_pois.py  functions.py  initialize.py  path.py  poi_based_generation.py  prepare_networks.py  prepare_pois.py  real_city_metrics.py
backend/schemas/: schemas.py  token_schema.py  user_schema.py
backend/user/: superuser_endpoints.py  user_endpoints.py  user_methods.py
src/api_sk/: __init__.py  main.py
src/api_sk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api_sk/auth/: auth.py
src/api_sk/core/: config.py  endpoints.py  routers.py
src/api_sk/data/: db_methods.py  fake_db.py  users_db_fake.json
src/api_sk/model/: circular.py
src/api_sk/schemas/: schemas.py
src/api_sk/user/: superuser_endpoints.py  user_methods.py
src/cicloapi/: __init__.py  install_hook.py
src/cicloapi/auth/: auth.py  hashing.py
src/cicloapi/backend/models/jobs/scripts/: downloadloop.py
src/cicloapi/backend/models/parameters/: parameters.py
src/cicloapi/backend/models/scripts/: analyze_results.py  cluster_pois.py  functions.py  initialize.py  path.py  poi_based_generation.py  prepare_networks.py  prepare_pois.py  real_city_metrics.py
src/cicloapi/core/: config.py  endpoints.py  routers.py
src/cicloapi/data/: db_methods.py  fake_db.py
src/cicloapi/schemas/: schemas.py  token_schema.py  user_schema.py
src/cicloapi/user/: superuser_endpoints.py  user_methods.py
