[project]
name = "vcity-circular-api"
version = "0.1.0"
description = "Circular index API for the vCity project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi==0.115.6",
    "passlib[bcrypt]==1.7.4",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "uvicorn==0.34.0",
]

[tool.commitizen]
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version", "src/api_sk/__version__.py"]
version_scheme = "pep440"
update_changelog_on_bump = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["api_sk"]
package-dir = { "" = "src" }

[tool.hatch.build.targets.wheel]
packages = ["src/api_sk"]

[dependency-groups]
dev = [
    "commitizen>=4.4.1",
    "ruff>=0.9.10",
]

[project.scripts]
apisk = "api_sk.__init__:main"
